# mSOMA

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements_test.txt
.github/workflows/: build_test.yml
conda_package/: meta.yaml
examples/: README.md  SLURM.config  mSOMA.nf  run_SLURM_example.sh  run_w_conda.sh  sample_sheet_chrM.tsv
examples/synthetic_data/: chrM_seed1_ART.bam  chrM_seed1_ART.bam.bai
src/msoma/: command_line.py  count.py  get_betabin.R  merge.py  pileup2counts.py  qnames.py  utils.py
tests/: conftest.py  test_command_line.py  test_count.py  test_merge.py  test_regression.py  test_utils.py
tests/data/: gt_test.counts  test.bam  test.bam.bai  test.bed  test.count  test.fa  test.fa.fai  test.mpileup
