[project]
name = "mSOMA"

version = "0.1.0"
authors = [
    {name = "Winnie Xu", email = "huixinx@princeton.edu"},
    {name = "Rob Bierman", email = "rbierman@princeton.edu"},
]

description = "Somatic mutation detection using a beta-binomial null model"
readme = "README.md"
license = {text = "MIT License"}

requires-python =  ">= 3.7.1"
dependencies = [
    "numpy >= 1.19",
    "pandas >= 1.1",
    "scipy >= 1.5",
    "statsmodels >= 0.12",
    "importlib_resources >= 5.4",
    "pysam >= 0.19",
    "click >= 8.0",
]

[project.scripts]
msoma = "msoma.command_line:msoma"

[tool.setuptools.package-data]
msoma = ["get_betabin.R"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests as needing to be run in docker container",
]

[tool.black]
src = 'src'
